After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 590646 - Fix check for zero-sized textures in MutterShapedTexture
Fix check for zero-sized textures in MutterShapedTexture
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2009-08-03 16:12 UTC by Tomas Frydrych
Modified: 2009-08-04 08:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch fixing check for 0-sized textures (1.43 KB, patch)
2009-08-03 16:13 UTC, Tomas Frydrych
committed Details | Review

Description Tomas Frydrych 2009-08-03 16:12:27 UTC
The attached patch is an updated version of the patch from http://bugzilla.openedhand.com/show_bug.cgi?id=1538.
Comment 1 Tomas Frydrych 2009-08-03 16:13:55 UTC
Created attachment 139798 [details] [review]
Patch fixing check for 0-sized textures
Comment 2 Owen Taylor 2009-08-03 19:02:10 UTC
Definitely fine to commit, though I still am unsure about how one dimension could be zero without the other dimension being zero.
Comment 3 Tomas Frydrych 2009-08-04 08:08:56 UTC
I admit I do not understand that either.

Committed as 245908909baa12cf0fca53d8eeb2a6205bf2e5ed.